<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BillSplitActivity">

    <TextView
        android:id="@+id/lblBillAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/lblBillAmount"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtBillAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/txtBillAmountHint"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblBillAmount"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblNumPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/lblNumPeople"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblBillAmount" />

    <EditText
        android:id="@+id/txtNumPeople"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/txtNumPeopleHint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblNumPeople"
        app:layout_constraintTop_toBottomOf="@+id/txtBillAmount" />

    <TextView
        android:id="@+id/lblQuality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/lblQuality"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblNumPeople" />

    <Spinner
        android:id="@+id/spnQuality"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/lblQuality"
        app:layout_constraintTop_toBottomOf="@+id/txtNumPeople" />

    <TextView
        android:id="@+id/lblAmountPerPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/lblAmountPerPerson"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalculate" />

    <TextView
        android:id="@+id/lblBillPerPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="28dp"
        android:text="@string/lblBillPerPerson"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblAmountPerPerson" />

    <TextView
        android:id="@+id/lblTipPerPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="8dp"
        android:text="@string/lblTipPerPerson"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblBillPerPerson" />

    <TextView
        android:id="@+id/lblTotalPerPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="8dp"
        android:text="@string/lblTotalPerPerson"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTipPerPerson" />

    <TextView
        android:id="@+id/txtBillPerPerson"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="28dp"
        android:gravity="end"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/lblBillPerPerson"
        app:layout_constraintTop_toBottomOf="@+id/lblAmountPerPerson"
        tools:text="$69.99" />

    <TextView
        android:id="@+id/txtTipPerPerson"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/lblTipPerPerson"
        app:layout_constraintTop_toBottomOf="@+id/txtBillPerPerson"
        tools:text="$10.50" />

    <TextView
        android:id="@+id/txtTotalPerPerson"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/lblTotalPerPerson"
        app:layout_constraintTop_toBottomOf="@+id/txtTipPerPerson"
        tools:text="$80.49" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:text="@string/btnCalculate"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblQuality" />

</android.support.constraint.ConstraintLayout>